修复提问时有文本template内容，向量数据库内容无法同步删除bug